--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,14 +1,14 @@
 @media (min-width: 1024px) and (max-width: 1919px) {
   .categorie {
     display: flex;
-    width: 20em;
-    margin: 0.5em 0.1em;
+    width: 16em;
+    margin: 0.4em 0.1em;
   }
 
   .categorie svg {
     margin: 0.8em;
     display: block;
-    width: 3.6em;
+    flex: 0 0 3.6em;
     height: auto;
     fill: #b9005f;
   }
@@ -20,9 +20,21 @@
   /* layout */
 
   main {
+    width: 66vw;
+    height: 94vh;
     display: flex;
     margin: auto;
-    height: 94vh;
+  }
+
+  .cntt {
+    width: 30vw;
+    height: 24em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2.5em auto;
+    flex-wrap: wrap;
+    float: left;
   }
 
   #after-curve {
