--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -13,6 +13,10 @@
     fill: #b9005f;
   }
 
+  .categorie .link-disabled svg {
+    fill: #ddd;
+  }
+
   .categorie p {
     margin: auto 0.8em;
   }
