--- a/styles/style.css
+++ b/styles/style.css
@@ -124,43 +124,13 @@ aside a {
 
 main {
   width: 90vw;
-  display: flex;
+  display: block;
   margin: auto;
 }
 
 .wrapper {
   width: 100vw;
   margin: 0 auto;
-}
-
-/*main::before {
-  content: "";
-  width: 50%;
-  height: 2.5em;
-  display: block;
-  background-color: #bbb;
-  border-radius: 0.8em 4em 0em 0em;
-}*/
-
-footer nav {
-  scroll-snap-type: mandatory;
-  overflow: scroll;
-}
-
-footer {
-  display: block;
-  width: 100vw;
-  overflow: scroll;
-}
-
-footer ul {
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-footer li {
-  padding: 1em;
 }
 
 li {
@@ -195,10 +165,11 @@ a:focus {
   align-items: center;
   float: inline-end;
   padding: 0 1.6em;
+  margin: 1em auto;
 }
 
 .ui-settings li {
-  margin: 0.5em;
+  margin: 0 0.5em;
 }
 
 .ui-settings svg {
@@ -259,9 +230,13 @@ p {
 
 /* Folder section */
 
+main .subject {
+  display: block;
+}
+
 .folder {
   width: auto;
-  display: inline-block;
+  display: block;
   margin: 0 0 4em 0;
   position: relative;
   background-color: #fff;
@@ -315,77 +290,4 @@ p {
 .content svg {
   margin: 0 0.2em 0 -0.4em;
   fill: #b9005f;
-}
-
-/* Scroll snap type footer */
-.holster {
-  display: none;
-  align-items: center;
-  justify-content: space-between;
-  flex-flow: column nowrap;
-}
-
-.container {
-  display: block;
-  overflow: none;
-  flex: none;
-}
-
-.container.x {
-  width: 100%;
-  height: 5em;
-  flex-flow: row nowrap;
-}
-
-/* scroll-snap */
-.x.mandatory-scroll-snapping {
-  scroll-snap-type: x mandatory;
-}
-
-.x.proximity-scroll-snapping {
-  scroll-snap-type: x proximity;
-}
-
-.container > div {
-  text-align: center;
-  scroll-snap-align: center;
-  flex: none;
-}
-
-.x.container > div {
-  width: 50%;
-}
-
-.x.container > div:first-child {
-  margin-left: 25%;
-}
-
-.x.container > div:last-child {
-  margin-right: 25%;
-}
-
-.left-fade {
-  width: 5em;
-  height: 5em;
-  display: inline-flex;
-  position: fixed;
-  left: 0;
-  background: linear-gradient(
-    90deg,
-    rgba(238, 238, 238, 1) 0%,
-    rgba(238, 238, 238, 0) 100%
-  );
-}
-
-.right-fade {
-  width: 5em;
-  height: 5em;
-  display: inline-flex;
-  position: fixed;
-  right: 0;
-  background: linear-gradient(
-    90deg,
-    rgba(238, 238, 238, 0) 0%,
-    rgba(238, 238, 238, 1) 100%
-  );
 }
