--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -24,9 +24,50 @@
   /* layout */
 
   main {
-    display: flex;
+    display: block;
     margin: auto;
     height: 94vh;
+  }
+
+  main .subject {
+    display: block;
+  }
+
+  .toptab {
+    display: flex;
+    align-items: baseline;
+  }
+  
+  .tab {
+    content: '';
+    width: 25em;
+    height: 3em;
+    display: block;
+    background-color: #fff;
+    margin: 0;
+    border-radius: 3em 10em 0 0;
+  }
+  
+  .curve {
+    content: '';
+    width: 3em;
+    height: 3em;
+    display: block;
+    background-color: #eee;
+    margin: 0 0 0 -0.8em;
+    border-radius: 0 5em 0 5em;
+    z-index: 1;
+  }
+  
+  .curve-bg  {
+    content: '';
+    width: 3em;
+    height: 2em;
+    display: block;
+    background-color: #fff;
+    margin: 0 0 0 -3em;
+    border-radius: 2em 5em 0 0;
+    z-index: 0;
   }
 
   .cntt {
@@ -60,6 +101,16 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+  }
+
+  /* Interface */
+
+  .ui-settings {
+    display: inline-flex;
+    align-items: center;
+    float: inline-end;
+    padding: 0 1.6em;
+    margin: 0em auto;
   }
 
   /* Typografie */
