--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ header #logo::after {
 }
 
 a {
+  display: block;
   text-decoration: none;
 }
 
@@ -128,6 +129,10 @@ main {
   margin: auto;
 }
 
+.index {
+  display: flex;
+}
+
 .wrapper {
   width: 100vw;
   margin: 0 auto;
@@ -154,6 +159,14 @@ a:focus {
   background-color: #fff;
   border-radius: 0.4em;
   color: #fff;
+  fill: #fff;
+  outline: none;
+}
+
+/*button:focus {
+  background-color: #fff;
+  border-radius: 0.4em;
+  color: #b9005f;
   fill: #fff;
   outline: none;
 }
@@ -192,6 +205,41 @@ a:focus {
   text-decoration: none;
 }
 
+.subcat {
+  display: flex;
+  margin: 0.8em 0;
+  flex-wrap: wrap;
+}
+
+.subcat-btn {
+  width: auto;
+  height: auto;
+  background-image: linear-gradient(95.6deg, #b9005f, #E30059);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  text-align: end;
+  margin: 0.2em 0.4em;
+  padding: 0.4em 0.8em;
+  border-radius: 0.4em;
+  transition: 0.5s;
+}
+
+.subcat-btn:active {
+  background-color: #bbb;
+}
+
+.subcat-btn:focus {
+  background-image: linear-gradient(95.6deg, #fff, #eee);
+  color: #b9005f;
+  outline: none;
+  transition: 0.8s;
+}
+
+.subcat-btn:hover {
+  opacity: 0.66;
+}
+
 /* Typografie */
 
 h1,
@@ -206,7 +254,12 @@ h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2em;
+  max-width: 20em;
+}
+
+.toolgankelijk {
+  font-size: 2em;
 }
 
 h1 small {
@@ -230,7 +283,7 @@ p {
 
 /* Folder section */
 
-main .subject {
+.subject {
   display: block;
 }
 
@@ -290,4 +343,30 @@ main .subject {
 .content svg {
   margin: 0 0.2em 0 -0.4em;
   fill: #b9005f;
+}
+
+/* Toggle tussen articles */
+
+article {
+  display: none;
+  margin: 2em 0;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+
+
+/* Toggle tussen font sizes */
+.text120 {
+  font-size: 1em * 120%;
+}
+
+.text100 {
+  font-size: 1em * 100%;
 }
