--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -32,7 +32,7 @@
   .subcat-btn {
     width: auto;
     height: auto;
-    background-color: #b9005f;
+    background-image: linear-gradient(#b9005f, );
     color: #fff;
     border: none;
     cursor: pointer;
@@ -133,6 +133,11 @@
   .toolgankelijk {
     font-size: 2em;
   }
+
+  .folder {
+    min-height: 10em;
+  }
+
 }
 
 @media (min-width: 441px) and (max-width: 767px) {
