--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body {
   height: 100vh;
   width: 100vw;
   font-family: Fira sans, sans-serif;
-  background-color: ;
+  background-color: #eee;
 }
 
 header {
